muitos arquivos adicionados

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
+<!-- cabeçalho -->
+<app-header></app-header>
+
+<!-- conteúdo do site -->
 <router-outlet></router-outlet>
+
+<!-- rodapé do site -->
+<app-footer></app-footer>
+
