--- a/src/app/views/header/header.component.css
+++ b/src/app/views/header/header.component.css
@@ -1,7 +1,8 @@
-.example-icon {
-    padding: 0 14px;
-  }
-  .example-spacer {
-    flex: 1 1 auto;
-  }
-  
+.mat-toolbar-row {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+}
+.logo {
+    height: 170px;
+}
