--- a/src/app/views/header/header.component.html
+++ b/src/app/views/header/header.component.html
@@ -1,16 +1,12 @@
 <mat-toolbar color="primary">
     <mat-toolbar-row>
         <a class="logo" routerlink="/">
-            <img src="./assets/img/logo.png" alt="">
+            <img src="./assets/img/Ag1_09.jpg" alt="">
         </a>
-        <div class="example-label">Basic</div>
-        <div class="example-button-row">
-            <button mat-button routerlink="">Basic</button>
-            <button mat-button routerlink="" color="primary">Primary</button>
-            <button mat-button color="accent">Accent</button>
-            <button mat-button color="warn">Warn</button>
-            <button mat-button disabled>Disabled</button>
-            <a mat-button href="https://www.google.com/" target="_blank">Link</a>
+        <div class="menu-links">
+            <button mat-button routerlink="">Sobre</button>
+            <button mat-button routerlink="">Portfólio</button>
+            <button mat-button routerlink="">Contato</button>
         </div>
     </mat-toolbar-row>
 </mat-toolbar>
