update contato e sobre

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,12 @@
+
 <!-- cabeçalho -->
 <app-header></app-header>
+
+<!-- Menu -->
+<app-menu></app-menu>
+
+<!-- Carrossel de imagens -->
+<app-carousel></app-carousel>
 
 <!-- conteúdo do site -->
 <router-outlet></router-outlet>
