--- a/src/app/views/contato/contato.component.html
+++ b/src/app/views/contato/contato.component.html
@@ -1,1 +1,38 @@
-<p>contato works!</p>
+    <!-- Start explain text -->
+    <section class="container p-3">
+        <section class="py-5 text-center container">
+            <div class="row py-lg-5">
+                <div class="col-lg-6 col-md-8 mx-auto">
+                    <h1 class="fw-light">Fale com a gente!</h1>
+                    <p class="lead text-muted">
+                        Maecenas dictum dictum dui, id interdum erat eget. 
+                        Sed sit amet mauris. Vivamus rhoncus egestas. 
+                        In velit felis,varius commodo nisl. 
+                        Vestibulum euismod, id ullamcorper nisl arcu non ante.
+                    </p>
+                </div>
+            </div>
+        </section>  
+    </section>
+    <!-- End explain text -->
+
+    <!-- Start contact form -->
+    <section class="container">
+        <div class="text-center">
+            <h4 class="">Cadastre seu e-mail</h4>
+            <p>Quer receber noticias e ofertas tudo de primeira? Deixa com a gente, é só cadastrar seu e-mail!</p>
+        </div>
+        <div class="form-floating mb-3">
+            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+            <label for="floatingInput d-inline-flex align-items-center rounded">E-mail</label>
+        </div>
+        <div class="form-floating">
+            <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+            <label for="floatingPassword">Password</label>
+        </div>
+
+        <div class="d-grid gap-2 d-md-flex container justify-content-md-center p-3">
+            <button type="submit" class="btn-sm btn-outline-secondary bi bi-joystick"> Cadastrar</button>
+        </div>
+    </section>
+    <!-- End Contact form -->
