--- a/src/app/views/footer/footer.component.html
+++ b/src/app/views/footer/footer.component.html
@@ -1,6 +1,17 @@
-<!--
-<mat-toobar class="footer">
-    <span>Atividade muito mal desenvolvida pelo Senai.</span>
-</mat-toobar>
--->
-<p>footer</p>
+<!-- Start footer -->
+<footer class="bg-dark container">
+    <div class="row align-items-center p-3">
+        <div class="d-grid gap-2 d-md-flex container justify-content-md-center">
+            <a type="button" class="btn btn-sm btn-outline-secondary bi bi-facebook" href="https://www.facebook.com/">
+                Facebook
+            </a>
+            <a type="button" class="btn btn-sm btn-outline-secondary bi bi-instagram" href="https://www.instagram.com/">
+                Instagram
+            </a>
+        </div>
+    </div>
+    <div class="">
+        <p class="text-white text-center p-2">Copyright - Games - 2021</p>   
+    </div>
+</footer>
+<!-- End footer -->
