--- a/src/app/views/header/header.component.html
+++ b/src/app/views/header/header.component.html
@@ -1,12 +1,25 @@
-<mat-toolbar color="primary">
-    <mat-toolbar-row>
-        <a class="logo" routerlink="/">
-            <img src="./assets/img/Ag1_09.jpg" alt="">
-        </a>
-        <div class="menu-links">
-            <button mat-button routerlink="">Sobre</button>
-            <button mat-button routerlink="">Portfólio</button>
-            <button mat-button routerlink="">Contato</button>
+<!-- Start Banner -->
+<header>
+    <div class="album shadow bg-body py-5 bg-light">
+        <div class="container">
+            <div class="row align-items-end">
+                <!-- logo -->
+                <div class="col col-4 p-3">
+                    <img class="pulse mx-auto d-block" src="assets/images/Ag1_09.jpg" alt="logo">                           
+                </div>
+                <!-- the sentence -->
+                <div class="col-8">
+                    <figure class="justify-content-center">
+                        <blockquote class="blockquote">
+                            <p>Choose to play!</p>
+                        </blockquote>
+                        <figcaption class="blockquote-footer">
+                            We all make choices in life, but in the end <cite title="Source Title">our choices </cite>make us.
+                        </figcaption>
+                    </figure>
+                </div>
+            </div>
         </div>
-    </mat-toolbar-row>
-</mat-toolbar>
+    </div>
+</header>
+<!-- End Banner -->
