--- a/src/app/views/header/header.component.css
+++ b/src/app/views/header/header.component.css
@@ -1,8 +1,22 @@
-.mat-toolbar-row {
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-between;
+.pulse {
+    width: 250px;
+    height: 250Px;
+    background: #5f5f5f;
+    border-radius: 50%;
+   /* line-height: 100px; */
+    animation: animate 3s linear infinite;
 }
-.logo {
-    height: 170px;
+@keyframes animate {
+    0% {
+        box-shadow: 0 0 0 0 rgba(55, 209, 201, 0.7), 0 0 0 0 rgba(24, 153, 104, 0.7);
+    }
+    40% {
+        box-shadow: 0 0 0 50px rgba(55, 209, 201, 0), 0 0 0 0 rgba(55, 209, 201, 0.7);
+    }
+    80% {
+        box-shadow: 0 0 0 50px rgba(55, 209, 201, 0), 0 0 0 30px rgba(55, 209, 201, 0);
+    }
+    100% {
+        box-shadow: 0 0 0 0 rgba(55, 209, 201, 0), 0 0 0 30px rgba(55, 209, 201, 0);
+    }
 }
