--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,12 @@
 <!-- Carrossel de imagens -->
 <app-carousel></app-carousel>
 
+<!-- Sobre -->
+<app-sobre></app-sobre>
+
+<!-- contato -->
+<app-contato></app-contato>
+
 <!-- conteúdo do site -->
 <router-outlet></router-outlet>
 
