--- a/src/app/views/sobre/sobre.component.html
+++ b/src/app/views/sobre/sobre.component.html
@@ -1,2 +1,67 @@
-<p>sobre works!</p>
-<h1>Sobre Works!</h1>
+<!-- About Start -->
+<section>
+    <div class="container">
+        <div class="clearfix p-3 border">
+            <img src="./assets/images/Ag1_09.jpg" class="col-md-2 float-md-end mb-3 ms-md-3 container" alt="logo">
+            
+            <h5>Sobre</h5>
+
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                Est, eius pariatur. At, quod rem ipsa, quis numquam nobis 
+                eos dolores accusantium exercitationem quo error cumque commodi tempora cum in molestias.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Voluptates ad iure pariatur numquam, eos dolorum consequatur autem exercitationem porro 
+                itaque vel, animi illo vitae ullam eius ea modi cupiditate eligendi.
+            </p>
+        
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+                Saepe minima odit aperiam libero perferendis possimus quo earum sunt facere, 
+                eos praesentium ipsa ratione, perspiciatis quaerat! Esse, in. Architecto, ab id.
+            </p>
+        </div>
+    </div>
+</section>
+<!-- About end -->
+
+<!-- Start about mission, vision and values -->
+<section>
+    <div class="container">
+        <div class="row p-5">
+            <div class="col-md-4 p-3">
+                <figure class="justify-content-center">
+                    <blockquote class="blockquote">
+                        <p class="text-center">A Missão!</p>
+                    </blockquote>
+                    <figcaption class="blockquote-footer">
+                        Proporcionar um serviço de qualidade e oportunidades para os amantes de jogos e do mundo tecnológico. <br>
+                        "Inspirar e valorizar a paixão pela tecnologia, jogos, 
+                        conteúdos, entretenimento e inovação, <cite title="Source Title">causando uma emoção inédita, </cite>criando experiências e prazeres."
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="col-md-4 p-3 border">
+                <figure class="justify-content-center">
+                    <blockquote class="blockquote">
+                        <p class="text-center">A Visão!</p>
+                    </blockquote>
+                    <figcaption class="blockquote-footer">
+                        "Ampliar o público-alvo e as nossas ações no <cite title="Source Title">mundo gamer </cite>e <cite title="Source Title">tecnológico.</cite>"
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="col-md-4 p-3">
+                <figure class="justify-content-center">
+                    <blockquote class="blockquote">
+                        <p class="text-center">Os Valores!</p>
+                    </blockquote>
+                    <figcaption class="blockquote-footer">
+                        "Nossos valores envolvem, ética, inovação, respeito aos <cite title="Source Title">clientes, </cite>respeito <cite title="Source Title">às leis.</cite>"
+                    </figcaption>
+                </figure>
+            </div>
+        </div>
+    </div>           
+</section>
+<!-- End about mission, vision and values -->
