configuração do menu e consertado bug da home.component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,15 @@
 
-<!-- cabeçalho -->
+<!-- cabeçalho que será carregado uma única vez -->
 <app-header></app-header>
 
-<!-- Menu -->
+<!-- Menu que será carregado uma única vez -->
 <app-menu></app-menu>
 
-<!-- Carrossel de imagens -->
+<!-- Carrossel de imagens que será carregado uma única vez -->
 <app-carousel></app-carousel>
 
-<!-- Sobre -->
-<app-sobre></app-sobre>
-
-<!-- contato -->
-<app-contato></app-contato>
-
-<!-- conteúdo do site -->
+<!-- conteúdo que será exibido no site quando for acessado atravez do menu -->
 <router-outlet></router-outlet>
 
-<!-- rodapé do site -->
+<!-- rodapé do site que será carregado uma única vez -->
 <app-footer></app-footer>
