--- a/src/app/views/menu/menu.component.html
+++ b/src/app/views/menu/menu.component.html
@@ -7,12 +7,12 @@
             </button>
             <div class="nav collapse navbar-collapse" id="navbarCollapse">
                 <ul class="d-grid gap-2 d-md-flex container justify-content-md-center">
-                    <a href="index-b.html" type="button" class="btn btn-sm btn-outline-secondary bi bi-joystick mb-1 mb-md-2 active"> HOME</a>
-                    <a href="assets/produtos-b.html" type="button" class="btn btn-sm btn-outline-secondary bi bi-joystick mb-1 mb-md-2"> PRODUTOS</a>
-                    <a href="assets/eventos-b.html" type="button" class="btn btn-sm btn-outline-secondary bi bi-joystick mb-1 mb-md-2"> EVENTOS</a>
-                    <a href="assets/portifolio-b.html" type="button" class="btn btn-sm btn-outline-secondary bi bi-joystick mb-1 mb-md-2"> PORTIFÓLIO</a>
-                    <a href="assets/sobre-b.html" type="button" class="btn btn-sm btn-outline-secondary bi bi-joystick mb-1 mb-md-2"> SOBRE</a>
-                    <a href="assets/contato-b.html" type="button" class="btn btn-sm btn-outline-secondary bi bi-joystick mb-1 mb-md-2"> CONTATO</a>
+                    <a routerLink="./home-component" routerLinkActive="active" type="button" class="btn btn-sm btn-outline-secondary bi bi-joystick mb-1 mb-md-2 active"> HOME</a>
+                    <a routerLink="./produtos-component" routerLinkActive="active" type="button" class="btn btn-sm btn-outline-secondary bi bi-joystick mb-1 mb-md-2"> PRODUTOS</a>
+                    <a routerLink="./eventos-component" routerLinkActive="active" type="button" class="btn btn-sm btn-outline-secondary bi bi-joystick mb-1 mb-md-2"> EVENTOS</a>
+                    <a routerLink="./portfolio-component" routerLinkActive="active" type="button" class="btn btn-sm btn-outline-secondary bi bi-joystick mb-1 mb-md-2"> PORTIFÓLIO</a>
+                    <a routerLink="./sobre-component" routerLinkActive="active" type="button" class="btn btn-sm btn-outline-secondary bi bi-joystick mb-1 mb-md-2"> SOBRE</a>
+                    <a routerLink="./contato-component" routerLinkActive="active" type="button" class="btn btn-sm btn-outline-secondary bi bi-joystick mb-1 mb-md-2"> CONTATO</a>
                 </ul>
             </div>
         </div>
