--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,14 +1,14 @@
 
-<div id="banner-home">
+<!--div id="banner-home">
     <img src="" alt="">
     <div class="texto-home">
         <button mat-raised-button class="btn">VP</button>
-        <!--h1>{{titulo}}</h1>
-        <p>{{texto}}</p-->
+        <h1>{{titulo}}</h1>
+        <p>{{texto}}</p>
     </div>
-</div>
+</div-->
 
-<!-- Start explain text 
+<!-- Start explain text -->
 <section class="container p-3">
     <section class="py-5 text-center container">
         <div class="row py-lg-5">
@@ -19,7 +19,9 @@
                     Sed sit amet mauris. Vivamus velit felis rhoncus egestas. 
                     In velit felis,varius commodo nisl. 
                     Vestibulum euismod, id ullamcorper ante.
-                    <h1 class="fw-light">Conheça nossa comunidade!</h1>
+                </p>
+                <h1 class="fw-light">Conheça nossa comunidade!</h1>
+                <p class="lead text-muted">
                     Maecenas dictum dictum dui, id interdum. 
                     Sed sit amet mauris. Vivamus velit felis. 
                     In velit felis,varius commodo nisl. 
@@ -29,4 +31,4 @@
         </div>
     </section>  
 </section>
- End explain text -->
+<!-- End explain text -->
