--- a/src/app/views/portifolio/portifolio.component.html
+++ b/src/app/views/portifolio/portifolio.component.html
@@ -21,7 +21,7 @@
     <div class="container"><!-- Container start -->           
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3"><!-- Row start -->
             <div class="card shadow-sm">
-                <img src="images/Profile_1.jpg" alt="">   
+                <img src="assets/images/Profile_1.jpg" alt="">   
                 <div class="card-body">
                     <p class="card-text">
                         Promoção "Não largo o controle!" de 2020.
@@ -34,7 +34,7 @@
                 </div>
             </div>
             <div class="card shadow-sm"><!-- Card 1-->
-                <img src="images/Profile_2.jpg" alt="">   
+                <img src="assets/images/Profile_2.jpg" alt="">   
                 <div class="card-body">
                     <p class="card-text">
                         Promoção "Não largo o controle!" de 2019.
@@ -47,7 +47,7 @@
                 </div>
             </div>               
             <div class="card shadow-sm"><!-- Card 2 -->
-                <img src="images/Profile_3.jpg" alt="">   
+                <img src="assets/images/Profile_3.jpg" alt="">   
                 <div class="card-body">
                     <p class="card-text">
                         Promoção "Não largo o controle!" de 2018.
@@ -60,7 +60,7 @@
                 </div>
             </div>
             <div class="card shadow-sm">
-                    <img src="images/Profile_4.jpg" alt="">   
+                    <img src="assets/images/Profile_4.jpg" alt="">   
                 <div class="card-body">
                     <p class="card-text">
                         Evento realizado em outubro de 2020.
@@ -73,7 +73,7 @@
                 </div>
             </div>
             <div class="card shadow-sm"><!-- Card 3 -->
-                <img src="images/Profile_5.jpg" alt="">   
+                <img src="assets/images/Profile_5.jpg" alt="">   
                 <div class="card-body">
                     <p class="card-text">
                         Evento realizado em outro de 2019.
@@ -86,7 +86,7 @@
                 </div>
             </div>               
             <div class="card shadow-sm"><!-- Card 4 -->
-                <img src="images/Profile_6.jpg" alt="">   
+                <img src="assets/images/Profile_6.jpg" alt="">   
                 <div class="card-body">
                     <p class="card-text">
                         Evento realizado em outro de 2018.
