--- a/src/app/views/menu/menu.component.html
+++ b/src/app/views/menu/menu.component.html
@@ -5,7 +5,7 @@
             <button class="navbar-toggler container justify-content-center mb-2 mb-md-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="bi bi-chevron-double-down"> - Home</span>
             </button>
-            <div class="nav collapse navbar-collapse" id="navbarCollapse">
+            <div class="nav collapse navbar-collapse p-3" id="navbarCollapse">
                 <ul class="d-grid gap-2 d-md-flex container justify-content-md-center">
                     <a routerLink="./home-component" routerLinkActive="active" type="button" class="btn btn-sm btn-outline-secondary bi bi-joystick mb-1 mb-md-2 active"> HOME</a>
                     <a routerLink="./produtos-component" routerLinkActive="active" type="button" class="btn btn-sm btn-outline-secondary bi bi-joystick mb-1 mb-md-2"> PRODUTOS</a>
