--- a/src/app/views/header/header.component.html
+++ b/src/app/views/header/header.component.html
@@ -1,6 +1,6 @@
 <!-- Start Banner -->
 <header>
-    <div class="album shadow bg-body py-5 bg-light">
+    <div class="album bg-body py-5 bg-light">
         <div class="container">
             <div class="row align-items-end">
                 <!-- logo -->
